style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
	min-height: 100%;
	background: #fff;
	color: #000;
}

body {
	font-size: 1.4rem;
	text-rendering: optimizeLegibility;
  font-family: 'Roboto', sans-serif;
}

#all-content {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
  align-items: center;
  /*justify-content: center;
  justify-content: flex-end;
  padding-bottom: 15vh;*/
}

#title-holder {
  background: linear-gradient(to right, #F761A1 , #8C1BAB);
  width: 100%;
  text-align: center;
  color: #ffffff;
  font-family: cursive;
}

#title {
  font-size: 1.6em;
}

#question-btn {
  font-family: cursive;
  font-weight: 600;
  height: 8vh;
  width: 25vw;
  border-radius: 15em;
  /*background: yellow;*/
  background: linear-gradient(to right, #F761A1 , #8C1BAB);
  border: none;
  color: #ffffff;
  /*border: 0.15em solid cadetblue;
  box-shadow: 0px 5px 5px 1px blue;*/
  cursor: pointer;
  position: absolute;
  bottom: 12vh;
}

#question-btn:hover {
  transform: scale(2px);
}

#question-btn:active {
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

#question-holder {
  display: none;
  font-size: 1.3em;
  margin: 5vh;
  width: 80%;
  justify-content: center;
  text-align: center;
  height: 35vh;
  position: absolute;
  top: 30%;
}

